Fixed the filter

--- a/app/views/loads/index.html.erb
+++ b/app/views/loads/index.html.erb
@@ -340,6 +340,7 @@
                     <%= select_tag 'load_to', options_for_select(country_list.collect{ |u| [u] }, :selected=> params[:load_to].present? ? params[:load_to] : ''), :prompt=>"Destination", :class=> "width-20" %>
                     <%= select_tag :load_material, options_for_select(Load::LOAD_MATERIAL.map {|k| [k.humanize.capitalize]}, :selected=> params[:load_material].present? ? params[:load_material] : ''), :prompt=>"Material", :class=> "width-20" %>
                     <%= text_field_tag :load_schedule_date, "", class: 'width-15-date', id: "datepicker", :placeholder=>"Scheduled Date", value: params[:load_schedule_date].present? ? "#{params[:load_schedule_date]}" : '' %>
+                    <%= select_tag :load_truck_type, options_for_select(Load::LOAD_TRUCK_TYPE.map {|k| [k.humanize.capitalize]}, :selected=> params[:load_truck_type].present? ? params[:load_truck_type] : ''), :prompt=>"Truck Type" %>
         </div>
                   <%= submit_tag "Search", :name => nil, :class=> "mar-lft-15" %>
                 <% end %>
@@ -380,8 +381,6 @@
 </div>
                                 </div>
                             </div>
-
-
                         </div>
                     </div>
                     <script type="text/javascript" lang="javascript">
