--- a/app/views/trucks/_index_user_profile.html.erb
+++ b/app/views/trucks/_index_user_profile.html.erb
@@ -45,7 +45,7 @@
           <%= link_to "Accepted request", "javascript:void(0)", :class=>"btn-xs btn-success btn-white-color" %>
              %>
         <% else %>
-          <%= link_to "Accept", send_booked_mail_path(:id=> truck.id), :class=>"btn-xs btn-danger btn-white-color" %>
+          <%= link_to "Accept", send_booked_mail_path(:id=> truck.id), :class=>"btn-xs btn-danger btn-white-color" unless current_user.present? %>
           <% end %>    
       </td> 
     </tr>
