--- a/app/views/truck_book/truck_booking_email.html.erb
+++ b/app/views/truck_book/truck_booking_email.html.erb
@@ -16,9 +16,8 @@
     <th>Load_schedule_date</th>
     <th>Source area</th>
     <th>Destination area</th>
+    <th>Load material</th>
   </tr>
- 
-  <%# @load_user.each do |load_user| %>
     <tr>
       <td><%= @load.load_from %></td>
       <td><%= @load.load_to %></td>
@@ -27,6 +26,7 @@
       <td><%= @load.load_schedule_date %></td>
       <td><%= @load.source_pin_code %></td>
       <td><%= @load.destination_pin_code %></td>
+      <td><%= @load.load_material %></td>
     </tr>
   </table>
   </body>
