--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -68,6 +68,7 @@ border-collapse: separate;
 .note-docs{font-size: 10px;}
 .mar-lft-15{margin-left: 15px;}
 .width-15-date{width: 15% !important;}
-.text-data-align{font-size: 25px;
-text-align: left;}
+.text-data-align{font-size: 25px;text-align: left;}
 .confirm-btn{font-size: 20px;}
+#datepicker{font-weight: 500;border: 2px solid gray !important;}
+.information-text{width: 100% !important;}
