--- a/app/views/trucks/new.html.erb
+++ b/app/views/trucks/new.html.erb
@@ -21,7 +21,8 @@
         <td>
           <div class="form-group ">
         <label for="from">Vehicle Number<span>*</span></label>
-         <%= f.text_field :vehicle_number, class: "input control-label col-sm-4",:placeholder=> "Vehicle Number" %>
+         <%= f.text_field :vehicle_number, class: "input control-label col-sm-4",:placeholder=> "Vehicle Number", :maxlength => 13 %>
+         <span id="validate-msg-vehicle-number">12 characters remaining</span>
       </div>
         </td>
         <td>
@@ -33,7 +34,8 @@
         <td>
           <div class="form-group">
         <label for="from">Driver Mobile Number<span>*</span></label>
-         <%= f.text_field :driver_mobile_no, class: "input control-label col-sm-4", :placeholder=> "Contact Number" %>
+         <%= f.text_field :driver_mobile_no, class: "input control-label col-sm-4", :placeholder=> "Contact Number", :maxlength => 13 %>
+         <span id="validate-msg-mobile">12 characters remaining</span>
       </div>
         </td>
       </tr>
@@ -43,15 +45,21 @@
       <tr>
         <td>
           <div class="form-group">
-        <label for="from">Available truck capacity(Metric Ton)<span>*</span></label>
-        <%= f.select :truck_weight, options_for_select(Load::LOAD_WEIGHT.map {|k| [k.humanize.capitalize]}),:prompt=>"Select Weight" %>
+        <label for="from">Truck Type<span>*</span></label>
+          <%= f.select :truck_type, options_for_select(Truck::TRUCK_CAPICITY.map {|k,v| [k,v]}),:prompt=>"Truck type" %>
       </div>
         </td>
         <td>
           <div class="form-group">
-        <label for="from">Truck Type<span>*</span></label>
-          <%= f.select :truck_type, options_for_select(Load::LOAD_TRUCK_TYPE.map {|k,v| [k]}),:prompt=>"Truck type" %>
+        <label for="from">Max truck capacity(Metric Ton)<span>*</span></label>
+         <input id="max-truck-capacity" name="truck-capacity" type="text" readonly></input>
       </div>
+        </td>
+        <td>
+          <div class="form-group">
+            <label for="from">Available truck capacity(Metric Ton)<span>*</span></label>
+            <%= f.select :truck_weight, options_for_select(Truck::TRUCK_CAPICITY.map {|k,v| [v,v]}),:prompt=>"Select Weight" %>
+          </div>
         </td>
         <td>
           <div class="form-group">
@@ -129,4 +137,27 @@
       $('input.timepicker').timepicker();
     });
 })(jQuery);
+  $("#truck_truck_type").change(function(){
+    $("#max-truck-capacity").val($('#truck_truck_type :selected').val());
+  });
+  $("#new_truck").submit(function(){
+    var avali_capicity = $('#truck_truck_weight :selected').val();
+    var max_capicity = $('#max-truck-capacity').val();
+    if (avali_capicity > max_capicity ){
+      alert("Available truck capacity is greater then Max truck capacity");
+      return false;
+    }
+});
+  var maxmobileLength = 13;
+  var maxtrucknumberLength = 13;
+  $('#truck_driver_mobile_no').keyup(function() {
+    var length = $(this).val().length;
+    var length = maxmobileLength-length;
+    $('#validate-msg-mobile').text(length);
+  });
+  $('#truck_vehicle_number').keyup(function() {
+    var length = $(this).val().length;
+    var length = maxtrucknumberLength-length;
+    $('#validate-msg-vehicle-number').text(length);
+  });
 </script>
