Fixed the payment

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -77,3 +77,15 @@ border-collapse: separate;
   margin:1em 0;
   color: red;
 }
+.razorpay-payment-button {
+    background: url("/assets/PayWithRzp.png") center no-repeat;
+    background-size: contain;
+    box-shadow: none;
+    border: none;
+    outline: none;
+    font-size: 0;
+    height: 36px;
+    width: 230px;
+    padding: 0;
+    cursor: pointer;
+}
