--- a/app/views/ordermailer/booking_email.html.erb
+++ b/app/views/ordermailer/booking_email.html.erb
@@ -35,7 +35,7 @@
       <td><%= @truck.truck_type if @truck.truck_type.present? %></td>
       <td><%= @truck.expected_price if @truck.expected_price.present? %></td>
       <td><%= @truck.sharing if @truck.sharing.present? %></td>
-      <td><%= @truck.information if @truck.information.present? %></td>
+      <td><%#= @truck.information if @truck.information.present? %></td>
     </tr>
   </table>
   </body>
