--- a/app/views/loads/new.html.erb
+++ b/app/views/loads/new.html.erb
@@ -100,7 +100,7 @@
     <td>
       <div class="form-group form-margin-6">
         <label for="from">Are you wiling to share<span>*</span></label>
-          <%= f.select :sharing, options_for_select(Load::LOAD_SHARE.map {|k,v| [k,v]}, :selected=> params[:sharing].present? ? params[:load][:sharing] : ''  ) %>      
+          <%= f.select :sharing_load, options_for_select(Load::LOAD_SHARE.map {|k,v| [k,v]}, :selected=> params[:sharing].present? ? params[:load][:sharing_load] : ''  ) %>      
       </div>
       </td>
       <tr>
@@ -129,8 +129,11 @@
 <script type="text/javascript">
     $("#datepicker").datepicker({ minDate: 0, dateFormat: 'yy-mm-dd' });
 </script>
-<script type="text/javascvript">
+<script type="text/javascript">
   $("#load_load_truck_type").change(function(){
     $("#load_load_weight").val($('#load_load_truck_type :selected').val());
+  });
+  $("#load_load_weight").change(function(){
+    $("#load_load_truck_type").val($('#load_load_weight :selected').val());
   });
 </script>
