--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Sign up</h2>
+<div class="user-form">
+<h2><center>Sign up</center></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <div class="error-set">
@@ -94,6 +95,7 @@
     <%= f.submit "Sign up", class: "main-btn" %>
   </div>
 <% end %>
+</div>
 
 <%= render "devise/shared/links" %>
 <script type="text/javascript">
