--- a/app/views/trucks/_index.html.erb
+++ b/app/views/trucks/_index.html.erb
@@ -7,7 +7,7 @@
     <th scope="col">Schedule Date</th>
     <th scope="col">Vehicle Number</th>
     <th scope="col">Map</th>
-    <th scope="col">Action</th>
+    <!-- <th scope="col">Action</th> -->
   </tr>
   <% trucks.each do |truck| %>
     <tr>
@@ -34,20 +34,20 @@
           <%= link_to image_tag('/assets/map_icon.png') + "",  root_direction_path(:truck_from=> truck.truck_from, :truck_to=>truck.truck_to), target: "_blank" %>
         </center>
         </td>
-      <td>
-        <% if truck.truck_booked == "requesting" %>
-          <% if params[:user_id].present? %>
-            <%= link_to "Accepting", make_confirmation_load_path(:id=> truck.id), :class=>"btn-xs btn-success btn-white-color" %>
-          <% else %>
-            <%= link_to "Accepting", "javascript:void(0)", :class=>"btn-xs btn-success btn-white-color" %>
-          <% end %>
-        <% elsif truck.truck_booked == "accept_request"%>
-          <%= link_to "Accepted request", "javascript:void(0)", :class=>"btn-xs btn-success btn-white-color" %>
-             %>
-        <% else %>
-          <%= link_to "Accept", send_booked_mail_path(:id=> truck.id), :class=>"btn-xs btn-danger btn-white-color" %>
-          <% end %>    
-      </td> 
+      <!-- <td> -->
+        <%# if truck.truck_booked == "requesting" %>
+          <%# if params[:user_id].present? %>
+            <%#= link_to "Accepting", make_confirmation_load_path(:id=> truck.id), :class=>"btn-xs btn-success btn-white-color" %>
+          <%# else %>
+            <%#= link_to "Accepting", "javascript:void(0)", :class=>"btn-xs btn-success btn-white-color" %>
+          <%# end %>
+        <%# elsif truck.truck_booked == "accept_request"%>
+          <%#= link_to "Accepted request", "javascript:void(0)", :class=>"btn-xs btn-success btn-white-color" %>
+             <!-- %> -->
+        <%# else %>
+          <%#= link_to "Accept", send_booked_mail_path(:id=> truck.id), :class=>"btn-xs btn-danger btn-white-color" %>
+          <%# end %>    
+      <!-- </td>  --> 
     </tr>
   <% end %>
 <% else %>
